레이아웃 수정완료

--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/values-en/strings.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/values-en/strings.xml
@@ -3,16 +3,16 @@
     <string name="app_name">M4M</string>
 
     <string name="main_main">Today Lecture</string>
-    <string name="schedule_lectureType">Normal Lecture</string>
-    <string name="schedule_professor">Proffesor</string>
+    <string name="schedule_lectureType">English Lecture</string>
+    <string name="schedule_professor">Professor</string>
     <string name="schedule_schedule">Schedule</string>
     <string name="search_search">Search Attendance</string>
     <string name="search_date">Date</string>
     <string name="search_lectureNmae">ClassName</string>
-    <string name="search_attendance">Attendance</string>
+    <string name="search_attendance">Time</string>
     <string name="search_state">State</string>
-
-
+    <string name="itemcheck_time">None</string>
+    <string name="notification">Notification</string>
 
 
 </resources>
