--- a/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/values/strings.xml
+++ b/M4MTEST-master/M4MTEST-master/M4M_Final-master/m4mMiddle-master/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- 앱 이름 정의 부분-->
-    <string name="app_name">M4M</string>
+    <string name="app_name">아맞다</string>
 
     <string name="main_main">오늘의 수업</string>
     <string name="schedule_lectureType">일반강의</string>
